refactoring + avatars
